src/test/compile-fail/import-from-rename.rs
// error-pattern:expected

import baz = foo::{bar};

module foo {
    fn bar() {}
}

fn main() {
}